# DeepCases

./: .gitignore  README.md  install_venv.sh  pip_install_venv.sh  pyproject.toml  requirements.txt  requirements_full_cpu.txt  requirements_full_uv_cpu.txt
Cases/image-classification/flowers102/: SPLIT_CONF.json  fetch_data.sh  install_venv.sh  requirements.txt  train_conf.yaml
Cases/image-classification/flowers102/Config_samples/: split_conf_sample.json  train_conf_sample.yaml
Cases/image-classification/flowers102/src/: fetch_dataset.py  main.py
Cases/image-classification/flowers102/src/utils/: flower_data_manager.py  flower_dataset.py
Cases/text-classification/imdb-movies-genre/: README.md  fetch_glove.sh  imdb.ipynb  install_venv.sh  pyproject.toml  requirements.txt  run_evaluation.sh  run_model_training.sh  run_prepare_data.sh  run_split_data.sh  train_conf.yaml
Cases/text-classification/imdb-movies-genre/Config_samples/: train_conf_sample.yaml
Cases/text-classification/imdb-movies-genre/src/: evaluation.py  main.py  prepare_data.py  split_data.py
Cases/text-classification/imdb-movies-genre/src/shell/: find_venv.sh
Cases/text-classification/imdb-movies-genre/src/utils/: cli_args.py  config.py  genre_encoder.py  (+6 more)
common/: __init__.py  log.py  trainer.py  utils.py  visualize.py
common/configue/: cv_cls_config.py  json_conf.py  nlp_cls_config.py  train_params.py  yaml_io.py
common/models/cv_cls/: alexnet.py  resnet.py
common/models/nlp_cls/: common.py  rnn.py  transformer.py
common/utils/: cli_args.py  file_utils.py  metrics.py  split_dataset.py
