[project]
name = "deepcases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "contractions==0.1.73",
    "matplotlib==3.10.6",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pandas==2.3.3",
    "pyarrow==21.0.0",
    "pydantic==2.12.3",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
torch-cpu   = ["torch @ https://download.pytorch.org/whl/cpu/torch-2.9.0%2Bcpu-cp311-cp311-manylinux_2_28_x86_64.whl"]
torch-gpu   = ["torch==2.9.0"]
#torch-cu126 = ["torch @ https://download.pytorch.org/whl/cu126/torch-2.9.0%2Bcu126-cp311-cp311-manylinux_2_28_x86_64.whl"]
#torch-cu128 = ["torch @ https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp311-cp311-manylinux_2_28_x86_64.whl"]
#torch-cu129 = ["torch @ https://download.pytorch.org/whl/cu129/torch-2.9.0%2Bcu129-cp311-cp311-manylinux_2_28_x86_64.whl"]
#torch-cu130 = ["torch @ https://download.pytorch.org/whl/cu130/torch-2.9.0%2Bcu130-cp311-cp311-manylinux_2_28_x86_64.whl"]
